--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -33,7 +33,7 @@
       <main>
         <div class="card">
           <section class="star">
-            <img src="./images/icon-star.svg" alt="Star" />
+            <img class="star-img" src="./images/icon-star.svg" alt="Star" />
 
             <h1>How did we do?</h1>
             <span>
@@ -75,11 +75,21 @@
 
           <!-- Thank you state start -->
           <section class="rating-complete" hidden>
-            You selected
+            <img src="./images/illustration-thank-you.svg" alt="Thankyou" class="illustration-thank-you">
+
+           <div class="tag"> 
+            You selected &nbsp; <span class="selected-number"> </span> &nbsp; out of 5
+           </div>
+
+
+            <!-- <span class="tag">You selected</p> 
             <span class="selected-number"></span>
-            out of 5 Thank you! We appreciate you taking the time to give a
-            rating. If you ever need more support, don’t hesitate to get in
-            touch!
+            <spanc class="tag1">out of 5 </span>  -->
+            
+            
+              <p class="thankyoutext"> Thank you! We appreciate you taking the time to give a
+              rating. If you ever need more support, don’t hesitate to get in
+              touch!</p>
 
             <!-- Thank you state end -->
           </section>
